2014-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm (do) : Set action with special command.

2014-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/logfile.c: Do no create the log symlink for a
	  checkdump or fetchdump run.

2014-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Parse checkdump and fetchdump line. new
	  return an Amanda::Message on error.
	* perl/Amanda/Rest/Report.pm: Handle Amanda::Report->new returning an
	  Amanda::Message.
	* server-src/amreport.pl: Handle Amanda::Report->new returning an
	  Amanda::Message.
	* server-src/logfile.c: Parse checkdump and fetchdump line.

2014-11-03  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Fix hang on eof.
	* common-src/ammessage (ammessage_encode_json): Improve encoding.
	* perl/Amanda/Cleanup.pm: Remove trailing '\n'.
	* perl/Amanda/Rest/Runs.pm: Fix Message module
	* perl/Amanda/Status.pm: Fix.
	* server-src/amstatus.pl: Set $pwd before changing the cwd.

2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cleanup.pm: Add message 34000010.
	* perl/Amanda/Process.pm: Return Message if can't open the trace_log.
	* perl/Amanda/Rest/Runs.pm: Accept multiple trace_log.

2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Changers.pm, perl/Amanda/Rest/Configs.pm,
	  perl/Amanda/Rest/Storages.pm: Do not accept comma in fields.
	* perl/Amanda/Rest/Storages/Labels.pm: Do not accept comma in labels.
	* installcheck/Amanda_Rest_Changers.pl,
	  installcheck/Amanda_Rest_Configs.pl,
	  installcheck/Amanda_Rest_Storages.pl: Do not use comma.

2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm (new): Return error if it can't open the
	  amdump_log file.
	* perl/Amanda/Rest/Status.pm, server-src/amstatus.pl: Handle error.

2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warnings.
