@@ -1,3 +1,7 @@
+2014-11-06  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amtrmidx.c: Do not delete index file newer than 7 days.
+	* installcheck/amrmtape.pl: Fix check.
+
 2014-11-05  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Script_App.pm (do) : Set action with special command.
 
